--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 
 @media only screen and (max-width: 1000px) {
   .background-img {
+    padding-top: 0%;
     z-index: -5;
     max-width: 95%;
     max-height: auto;
