--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,10 @@ body {
   background: rgb(214, 214, 221);
   background: linear-gradient(
     0deg,
-    rgba(214, 214, 221, 1) 2%,
+    rgb(152, 152, 158) 2%,
     rgba(255, 255, 255, 1) 89%
   );
+  background-attachment: fixed;
 }
 
 code {
