trying to fiogure out why sakura distorts the mouse hover

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+/* Home Page Links */
+
+.homepage-links {
+  margin-top: 1%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  z-index: 100;
+}
+
+.home-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  transition: all 0.4s ease-in-out;
+}
+
+.home-icon:hover {
+  filter: invert(77%) sepia(29%) saturate(4733%) hue-rotate(305deg)
+    brightness(113%) contrast(85%);
+}
+
 .welcome-page {
   animation: fadeinout 4.5s linear 1 forwards;
   background: rgb(214, 214, 221);
@@ -35,6 +58,36 @@
   }
   100% {
     opacity: 0;
+    z-index: -1;
+  }
+}
+
+
+.snow-bg {
+  content: "";
+  /* display: block; */
+  position: sticky;
+  z-index: -5;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* pointer-events: none; */
+  background-image: url("./Assets/Images/sakura-1-1.png"),
+    url("./Assets/Images/sakura-2.png");
+  animation: snow 20s linear infinite;
+  /* background-attachment: fixed; */
+}
+
+@keyframes snow {
+  0% {
+    background-position: 0px 0px, 0px 0px, 0px 0px;
+  }
+  50% {
+    background-position: 500px 500px, 100px 200px, -100px 150px;
+  }
+  100% {
+    background-position: 500px 1000px, 200px 400px, -100px 300px;
   }
 }
 
@@ -46,6 +99,7 @@
   opacity: 0.58;
 }
 
+/* adds suble white text shadow for easy readability */
 .change {
   text-shadow: 1px 1px whitesmoke;
 }
@@ -91,66 +145,4 @@
   max-height: auto;
   object-fit: cover;
   opacity: 0.99;
-}
-
-/* Home Page Links */
-
-.homepage-links {
-  margin-top: 1%;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-}
-
-.home-icon {
-  height: 2.4rem;
-  width: 2.4rem;
-  transition: all 0.4s ease-in-out;
-}
-
-.home-icon:hover {
-  filter: invert(77%) sepia(29%) saturate(4733%) hue-rotate(305deg)
-    brightness(113%) contrast(85%);
-}
-
-@media (max-width: 768px) {
-  .woocommerce ul.products li.product,
-  .woocommerce-page ul.products li.product,
-  .woocommerce-page[class*="columns-"] ul.products li.product,
-  .woocommerce[class*="columns-"] ul.products li.product {
-    width: 100%;
-    float: left;
-    clear: both;
-    margin: 0 7em;
-  }
-}
-
-.snow-bg {
-  content: "";
-  display: block;
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  pointer-events: none;
-  background-image: url("./Assets/Images/sakura-1-1.png"),
-    url("./Assets/Images/sakura-2.png");
-  animation: snow 20s linear infinite;
-  background-attachment: fixed;
-}
-
-@keyframes snow {
-  0% {
-    background-position: 0px 0px, 0px 0px, 0px 0px;
-  }
-  50% {
-    background-position: 500px 500px, 100px 200px, -100px 150px;
-  }
-  100% {
-    background-position: 500px 1000px, 200px 400px, -100px 300px;
-  }
 }
