--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,9 @@
 }
 
 @media only screen and (max-width: 1000px) {
+  body{
+    padding-left: 5%;
+  }
   .background-img {
     padding-top: 0%;
     z-index: -5;
