--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ html * {
 }
 
 body {
-  height: 100vh;
+  /* height: 100vh; */
   font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
