--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@
 }
 
 /* Loading Page Fade CSS */
-
 .welcome-page {
   animation: fadeinout 10s linear 1 forwards;
   background: rgb(214, 214, 221);
@@ -58,18 +57,10 @@
 /* Falling Sakura CSS */
 .snow-bg {
   content: "";
-  /* display: block; */
-  /* position: sticky; */
   z-index: -5;
-  /* top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; */
-  /* pointer-events: none; */
   background-image: url("./Assets/Images/sakura-1-1.png"),
     url("./Assets/Images/sakura-2.png");
   animation: snow 20s linear infinite;
-  /* background-attachment: fixed; */
 }
 
 @keyframes snow {
@@ -96,6 +87,7 @@
 @media only screen and (max-width: 1000px) {
   body{
     padding-left: 5%;
+    height: 110vh;
   }
   .background-img {
     padding-top: 0%;
